feat: добавить пользователя к админу путем поиска
